--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ stockfish = "^3.28.0"
 fastapi = "^0.96.0"
 uvicorn = {extras = ["standard"], version = "^0.22.0"}
 pydantic = "^1.10.9"
+chess = "^1.9.4"
 
 
 [tool.poetry.group.dev.dependencies]
