--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ ruff = "^0.0.272"
 mypy = "^1.3.0"
 black = {extras = ["d"], version = "^23.3.0"}
 isort = "^5.12.0"
+pytest = "^7.3.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
